Improved print CSS esp check boxes Monograph added to screen view Inputs re-enabled to improve opacity issue on IE

--- a/css/infusion.css
+++ b/css/infusion.css
@@ -16,5 +16,11 @@ div.errorProne{
 	display:none;
 }
 .ui-state-disabled {
-    opacity: 0.9;
+	zoom: 1;
+	display: inline-block;
+	filter: alpha(opacity=90);
+	opacity: 0.9;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+	    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
 }
+/* IE8 problems with opacity*/
