--- a/css/infusionPrint.css
+++ b/css/infusionPrint.css
@@ -44,30 +44,37 @@ h1{
 
 .ui-state-disabled {
     opacity:1 !important;
+	/* This works in IE 8 & 9 too */
+		/* ... but also 5, 6, 7 */
+		filter: alpha(opacity=100);
 }
 .ui-btn-up-c {
    border: 2px solid #999999 !important;
 }
 
-#nurseCheck{
-	width:40%;
-	float:right;
+
+fieldset.signCheck{
+	width:33%;
+	display:inline;
 	margin-top:10pt;
 }
+
 
 input[type=checkbox]
 {
  /* Double-sized Checkboxes */
- -ms-transform: scale(2); /* IE */
+ -ms-transform: scale(1.3); /* IE */
  -moz-transform: scale(2); /* FF */
  -webkit-transform: scale(2); /* Safari and Chrome */
  -o-transform: scale(2); /* Opera */
- padding: 10px;
+ padding: 3px;
+ background-color:white
+ ;
 }
 
 
 label.check{
-	font:9pt Arial;
+	font:9pt Arial!important;
     display: block;
     padding-left: 15pt;
     text-indent: -15pt;
@@ -84,8 +91,8 @@ input.check {
     *overflow: hidden;
 }
 input.sign{
-    width: 120pt;
-    height: 9pt;
+    width: 110pt;
+    height: 18pt;
     padding: 0;
     margin-right:20pt;
     vertical-align: bottom;
